--- a/bar/templates/blog/author.html
+++ b/bar/templates/blog/author.html
@@ -2,4 +2,8 @@
 
 {% block content %}
 <h1>Author: {{ author.username }}</h1>
+
+{% if show_articles_link %}
+<p><a href="#">{{ author.username }}'s articles</a></p>
+{% endif %}
 {% endblock %}
